manifest/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
  namespace: todo
spec:
  selector:
    app: todo-backend
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-service
  namespace: todo
spec:
  selector:
    app: todo-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: todo
spec:
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
  selector:
    app: mysql
